# validate-agents

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
docs/: 2026-06-23-validate-agents-design.md  2026-06-23-validate-agents-spec2-design.md  2026-06-23-validate-agents-spec2-lens2-design.md  2026-06-24-concept-check-idea-completion.md  2026-06-24-validate-agents-spec2-lens3-bounded-design.md  2026-06-24-validate-agents-spec2-lens3-design.md  2026-06-24-validate-agents-spec2-lens3-linstab-design.md  2026-06-24-validate-agents-spec2-lens3-negcontrol-design.md  2026-06-24-validate-agents-spec3-grounding-design.md  2026-06-25-validate-agents-arxiv-query-planner-design.md  2026-06-25-validate-agents-citation-circle-design.md  2026-06-25-validate-agents-citeaudit-design.md  2026-06-25-validate-agents-concordance-harness-design.md  2026-06-25-validate-agents-falsifiability-gate-design.md  2026-06-25-validate-agents-nli-faithfulness-design.md  2026-06-25-validate-agents-popper-evalue-design.md  2026-06-25-validate-agents-prover-credit-design.md  2026-06-25-validate-agents-spec3-grounding-tier2-design.md  2026-06-25-validate-agents-veriguard-design.md
tests/: conftest.py  fake_llm.py  test_agent_completion.py  test_agent_formalizer.py  test_agent_guards.py  test_agent_lenses.py  test_agent_orchestration.py  test_agent_steelman.py  test_agent_whole.py  test_artifact_claim.py  test_artifact_gate.py  test_artifact_load_bearing.py  test_artifact_maturity.py  test_citeaudit.py  test_citeaudit_cli.py  test_claim_executor_join.py  test_cli.py  (+39 more)
(+88 files in other folders)
