[project]
name = "valagents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2", "openai>=1.0", "tenacity", "python-dotenv", "pyyaml", "arxiv"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
include = ["valagents*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
